--- a/app/src/main/res/layout/activity_start_review.xml
+++ b/app/src/main/res/layout/activity_start_review.xml
@@ -28,6 +28,11 @@
                 android:text="책 토론방 입장"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="책 이름"
+                />
             <EditText
                 android:id="@+id/user_chat"
                 android:layout_width="200dp"
@@ -37,6 +42,11 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_marginBottom="20dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="유저 아이디"
+                />
 
             <EditText
                 android:id="@+id/user_edit"
