--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
@@ -34,6 +35,8 @@
                 android:id="@+id/tv_dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="5"
+                android:ellipsize="end"
                 android:text="description"
                 android:layout_margin="5dp"/>
             <TextView
@@ -42,11 +45,15 @@
                 android:layout_height="wrap_content"
                 android:text="pubDate"
                 android:layout_margin="5dp"/>
+
             <Button
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="리뷰쓰기"
                 android:id="@+id/btn_review"/>
+
+
 
 
         </LinearLayout>
