채팅 보낸 시간 표시

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -33,7 +33,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:hint="ISBN 코드"
+                android:hint="책 이름"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_marginBottom="20dp"/>
