--- a/app/src/main/res/layout/activity_start_review.xml
+++ b/app/src/main/res/layout/activity_start_review.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--디자인수정-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -25,44 +26,59 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
-                android:text="책 토론방 입장"
+                android:text="책 토론방 입장하기"
+                android:textColor="#756855"
+                android:textStyle="bold"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"/>
-            <TextView
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="책 이름"
-                />
-            <EditText
-                android:id="@+id/user_chat"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="ISBN 코드"
-                android:layout_gravity="center"
+                android:orientation="vertical"
                 android:gravity="center"
-                android:layout_marginBottom="20dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="유저 아이디"
-                />
+                android:background="@drawable/stroke"
+                android:padding="30dp">
 
-            <EditText
-                android:id="@+id/user_edit"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="USER NAME"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginBottom="20dp"/>
+                <EditText
+                    android:id="@+id/user_edit"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="닉네임을 입력하세요"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginBottom="8dp"
+                    android:textColorHint="#BA8D63"
+                    android:backgroundTint="#BA8D63"
+                    android:textSize="18dp"/>
 
-            <Button
-                android:id="@+id/user_next"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="GO"/>
+                <EditText
+                    android:id="@+id/user_chat"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="책 제목을 입력하세요"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColorHint="#BA8D63"
+                    android:backgroundTint="#BA8D63"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="16dp"/>
+
+                <android.widget.Button
+                    android:id="@+id/user_next"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#fff"
+                    android:textSize="17dp"
+                    android:background="@drawable/rounded"
+                    android:paddingHorizontal="20dp"
+                    android:backgroundTint="#756855"
+                    android:text="입장하기"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -70,13 +86,20 @@
             android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="#eee">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"                android:text="현재 개설된 채팅방"
+                android:textSize="17dp"
+                android:text="현재 개설된 채팅방"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:textColor="#BA8D63"
+                android:textStyle="bold"/>
+
             <ListView
                 android:id="@+id/chat_list"
                 android:layout_width="match_parent"
