--- a/app/src/main/res/drawable-v24/rounded_slight.xml
+++ b/app/src/main/res/drawable-v24/rounded_slight.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="300dp"/>
+        android:radius="20dp"/>
+    <solid android:color="@android:color/white"/>
 </shape>
