--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--디자인 수정-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -48,14 +49,18 @@
             android:gravity="center"
             >
 
-            <Button
-                android:background="@drawable/rounded"
+            <android.widget.Button
                 android:layout_margin="5dp"
                 android:layout_gravity="bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="토론하러 가기"
-                android:id="@+id/btn_review"/>
+                android:id="@+id/btn_review"
+                android:textColor="#fff"
+                android:textSize="17dp"
+                android:background="@drawable/rounded"
+                android:backgroundTint="#756855"
+                android:paddingHorizontal="20dp"/>
 
 
         </LinearLayout>
