--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -15,6 +15,7 @@
         android:textSize="20dp"
         android:gravity="center"
         android:text="종료하시겠습니까?"
+        android:textColor="#000000"
         />
     <LinearLayout
         android:layout_width="wrap_content"
