--- a/app/src/main/res/layout/activity_start_review.xml
+++ b/app/src/main/res/layout/activity_start_review.xml
@@ -41,6 +41,7 @@
                 android:padding="30dp">
 
                 <EditText
+                    android:textColor="#756855"
                     android:id="@+id/user_edit"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
                     android:textSize="18dp"/>
 
                 <EditText
+                    android:textColor="#756855"
                     android:id="@+id/user_chat"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
@@ -101,6 +103,7 @@
                 android:textStyle="bold"/>
 
             <ListView
+                android:textColor="#756855"
                 android:id="@+id/chat_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
