--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -19,26 +19,54 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:orientation="vertical">
-
-
             <TextView
                 android:id="@+id/tv_tt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="title"
-                android:layout_margin="5dp"/>
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:layout_margin="10dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="[저자]"
+                    android:layout_margin="5dp"/>
+                <TextView
+                    android:id="@+id/tv_at"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="author"
+                    android:layout_margin="5dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="[출판연도]"
+                    android:layout_margin="5dp"/>
+                <TextView
+                    android:id="@+id/tv_dt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="pubDate"
+                    android:layout_margin="5dp"/>
+            </LinearLayout>
             <TextView
                 android:id="@+id/tv_dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="description"
                 android:layout_margin="5dp"/>
-            <TextView
-                android:id="@+id/tv_dt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="pubDate"
-                android:layout_margin="5dp"/>
+
 
 
         </LinearLayout>
