--- a/app/src/main/res/layout/activity_start_review.xml
+++ b/app/src/main/res/layout/activity_start_review.xml
@@ -40,7 +40,19 @@
                 android:background="@drawable/stroke"
                 android:padding="30dp">
 
-                <EditText
+                <TextView
+                    android:textColor="#756855"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="닉네임"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColorHint="#BA8D63"
+                    android:backgroundTint="#BA8D63"
+                    android:textSize="12dp"/>
+
+                <TextView
                     android:textColor="#756855"
                     android:id="@+id/user_edit"
                     android:layout_width="200dp"
@@ -53,8 +65,20 @@
                     android:textColorHint="#BA8D63"
                     android:backgroundTint="#BA8D63"
                     android:textSize="18dp"/>
+                <TextView
+                    android:textColor="#756855"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="책 제목"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColorHint="#BA8D63"
+                    android:backgroundTint="#BA8D63"
+                    android:textSize="12dp"
+                    />
 
-                <EditText
+                <TextView
                     android:textColor="#756855"
                     android:id="@+id/user_chat"
                     android:layout_width="200dp"
