--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -36,8 +36,7 @@
                 android:id="@+id/chat_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="#756855"/>
+                android:layout_weight="1"/>
 
             <android.widget.Button
                 android:id="@+id/chat_sent"
@@ -46,6 +45,7 @@
                 android:layout_marginLeft="10dp"
                 android:text="전송"
                 android:textSize="16dp"
+                android:textStyle="bold"
                 android:textColor="#fff"
                 android:backgroundTint="#756855"
                 android:background="@drawable/rounded"/>
