--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -12,16 +12,21 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ivProfile"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            app:civ_border_overlay="true"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#756855"
             android:src="@drawable/profile"
-            android:background="@drawable/rounded"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <TextView
             android:layout_gravity="center"
@@ -29,7 +34,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,14 +46,18 @@
         android:layout_weight="36"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#eee">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="전체 토론방"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:gravity="center"/>
+            android:textSize="17dp"
+            android:textStyle="bold"
+            android:text="전체 토론방"
+            android:gravity="center"
+            android:textColor="#BA8D63"/>
 
         <ListView
             android:id="@+id/chat_list"
