--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Bookstorming" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Bookstorming" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">#756855</item>
+        <item name="colorOnPrimary">#756855</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">#D9BA83</item>
+        <item name="colorSecondaryVariant">#BA8D63</item>
+        <item name="colorOnSecondary">#433D33</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#433D33</item>
     </style>
-
+    <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@android:style/TextAppearance">
+        <item name="android:fontFamily">@font/dongle</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textColor">#756855</item>
+    </style>
 </resources>
