--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,12 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        tools:listitem="@layout/list_item"
         android:id="@+id/recyclerVies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
 
 
 
