--- a/app/src/main/res/layout/activity_start_review.xml
+++ b/app/src/main/res/layout/activity_start_review.xml
@@ -78,7 +78,7 @@
                     android:textSize="12dp"
                     />
 
-                <TextView
+                <EditText
                     android:textColor="#756855"
                     android:id="@+id/user_chat"
                     android:layout_width="200dp"
