--- a/app/src/main/res/layout/tab_host.xml
+++ b/app/src/main/res/layout/tab_host.xml
@@ -15,8 +15,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            >
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tab_booklist"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                 </LinearLayout>
 
