탭아이콘 변경-->임의의 아이콘으로 작성해 놓았으니 아이콘 수정가능

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,8 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         tools:listitem="@layout/list_item"
         android:id="@+id/recyclerVies"
         android:layout_width="match_parent"
