레이아웃 책 표지크게 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
 
     <androidx.appcompat.widget.SearchView
+        android:backgroundTint="@color/brown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/animal_search_view"
