--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -1,6 +1,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,24 +9,26 @@
 
     <LinearLayout
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ivProfile"
+        <Gallery
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:spacing="5dp"
+            android:id="@+id/gallery"
+            />
+
+        <ImageView
             android:layout_width="100dp"
+            android:id="@+id/ivPoster"
+            android:padding="10dp"
             android:layout_height="100dp"
-            android:layout_marginTop="20dp"
             android:layout_gravity="center"
-            android:background="@android:color/transparent"
-            app:civ_border_overlay="true"
-            app:civ_border_width="2dp"
+            android:background="@drawable/rounded"
             app:civ_border_color="#756855"
-            android:src="@drawable/profile"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/img_2"
             />
 
         <TextView
@@ -33,16 +36,15 @@
             android:id="@+id/userID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivProfile" />
+            app:layout_constraintTop_toBottomOf="@id/ivPoster" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_margin="19dp"
+        android:layout_margin="10dp"
         android:layout_weight="36"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -51,7 +53,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:textSize="17dp"
             android:textStyle="bold"
@@ -68,38 +70,34 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        >
+        android:layout_weight="1.5"
+        android:gravity="center">
+
         <Button
-            android:drawableRight="@drawable/coding"
-            android:backgroundTint="#FFFFFF"
-            android:textColor="@color/black"
-            android:layout_margin="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="로그아웃"
             android:id="@+id/btn_logout"
-            />
-        <Button
-            android:drawableRight="@drawable/coding_out"
-            android:backgroundTint="#FFFFFF"
-            android:gravity="right"
-            android:textColor="@color/black"
-            android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="회원 탈퇴"
+            android:layout_margin="5dp"
+            android:backgroundTint="#FFFFFF"
+            android:drawableRight="@drawable/coding"
+            android:text="로그아웃"
+            android:textColor="@color/default_brown" />
+
+        <Button
             android:id="@+id/deleteButton"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:backgroundTint="#FFFFFF"
+            android:drawableRight="@drawable/coding_out"
+            android:gravity="right"
+            android:text="회원 탈퇴"
+            android:textColor="@color/default_brown" />
 
 
     </LinearLayout>
 
 
-
-
 </LinearLayout>
-
