--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -57,7 +57,7 @@
             android:layout_marginBottom="20dp"
             android:textSize="17dp"
             android:textStyle="bold"
-            android:text="전체 토론방"
+            android:text="찜한 책"
             android:gravity="center"
             android:textColor="#BA8D63"/>
 
