--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical"
         >
         <CheckBox
+            android:visibility="gone"
             android:id="@+id/cart"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
