--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,9 +11,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColor">#433D33</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@android:style/TextAppearance">
+
         <item name="android:fontFamily">@font/dongle</item>
         <item name="android:textSize">30dp</item>
         <item name="android:textColor">#756855</item>
