--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="white_brown">#BA8D63</color>
     <color name="default_brown">#756855</color>
     <color name="default_new_brown">#45756822</color>
+    <color name="default_new_brown2">#45756822</color>
 
 </resources>
