--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.appcompat.widget.SearchView
-        android:backgroundTint="@color/default_new_brown"
+        android:backgroundTint="@color/default_new_brown2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/animal_search_view"
