--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -30,12 +30,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
-            <Button
+            <android.widget.Button
                 android:textColor="@color/white"
                 android:background="@drawable/rounded"
                 android:backgroundTint="#756855"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
+                android:layout_height="40dp"
                 android:id="@+id/checkid"
                 android:text="중복확인"
                 />
@@ -63,6 +63,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="영소문자,대문자,숫자,특수문자(!,@,#,^,*,(,))각각 필수 포함"
+            />
+        <TextView
+            android:textSize="13dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="6자리 이상 비밀번호 설정"
             />
         <LinearLayout
             android:layout_width="wrap_content"
@@ -116,7 +122,7 @@
         >
     </LinearLayout>
 
-    <Button
+    <android.widget.Button
         android:layout_margin="30dp"
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
