--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,9 +14,8 @@
         <item name="android:textColor">@color/black</item>
     </style>
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@android:style/TextAppearance">
-
         <item name="android:fontFamily">@font/dongle</item>
         <item name="android:textSize">30dp</item>
-        <item name="android:textColor">#756855</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
